--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-  font-family: 'Press Start 2P', sans-serif;
+  font-family: 'Press Start 2P';
   color: #eee;
   background-color: #222;
 }
